# UMLWars

./: .gitignore  CMakeLists.txt  UMLWarsApp.cpp  UMLWarsApp.h  main.cpp  pch.h
GameLib/: BadClassUML.cpp  BadClassUML.h  BadInheritance.cpp  BadInheritance.h  BadInheritanceItem.cpp  BadInheritanceItem.h  BadUMLAttribute.cpp  BadUMLAttribute.h  BadUMLName.cpp  BadUMLName.h  BadUMLOperation.cpp  BadUMLOperation.h  BadUMLVisitor.cpp  BadUMLVisitor.h  CMakeLists.txt  ClassUML.cpp  ClassUML.h  DeleteUMLVisitor.cpp  DeleteUMLVisitor.h  Emitter.cpp  Emitter.h  Game.cpp  Game.h  GameView.cpp  GameView.h  GoodClassUML.cpp  GoodClassUML.h  GoodInheritance.cpp  GoodInheritance.h  GoodInheritanceItem.cpp  GoodInheritanceItem.h  GoodUMLAttribute.cpp  GoodUMLAttribute.h  GoodUMLName.cpp  GoodUMLName.h  GoodUMLOperation.cpp  GoodUMLOperation.h  GoodUMLVisitor.cpp  GoodUMLVisitor.h  Harold.cpp  (+45 more)
Tests/: BadClassUMLTest.cpp  BadInheritanceTest.cpp  BadUMLVisitorTest.cpp  CMakeLists.txt  DeleteUMLVisitorTest.cpp  EmitterTest.cpp  EmptyTest.cpp  GameTest.cpp  GoodClassUMLTest.cpp  GoodInheritanceTest.cpp  HaroldTest.cpp  ScoreboardTest.cpp  TestsForHitTest.cpp  UMLDataTest.cpp  UMLHitVisitorTest.cpp  UMLTest.cpp  VisitGoodUMLTest.cpp
